Meta classes feature

--- a/templates/metas.html.twig
+++ b/templates/metas.html.twig
@@ -40,6 +40,7 @@
                                     <a href="{{ path('update_meta', {'id': fileVersion.id}) }}"
                                        class="btn btn-secondary">Update</a>
                                 {% endif %}
+                                <a href="{{ path('show_classes', {'id': fileVersion.id}) }}" class="btn btn-secondary">Classes</a>
                             </div>
                         </td>
                     </tr>
